The XML tokenizer reports a parse error twice if it occurs before the document element is found.

https://bugs.webkit.org/show_bug.cgi?id=31144

XMLTokenizer::doEnd() uses an additional logic to report a parse failure in
documents that end prematurely but are not considered invalid by QXmlStream.
This is to stay compatible with the libxml2 implementation.
However, that code path would be also hit in situations when it should not,
i.e. the error would have already been caught and handled. As a result, the
same error would be reported twice.

No new tests, because the problem is already covered by
fast/parser/xml-declaration-missing-ending-mark.html.

Add the Qt-specific result for that test and unskip it.

Canonical link: https://commits.webkit.org/42070@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50640 268f45cc-cd09-0410-ab3c-d52691b4dbfc